{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Ground",
            "id": "d997d8f4-0a9b-4127-955e-3a6184bb920d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f97c7ac8-2b55-4e73-b73b-e92550f2f389",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AttackMelee",
                    "type": "Button",
                    "id": "2f34c1b9-c76a-4257-9e86-25ed9f3a81c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b5ffafe9-aff7-4aac-9b64-e1f9b7ed58fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "a6882a43-d338-41a7-8996-709bec5a2b77",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Left",
                    "id": "5cb3076e-331a-4c6f-94cc-8833068e8d67",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "ad4aa590-e9fe-474b-a299-bbf8f75c0031",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "90cdf31c-c723-4d3c-b2aa-739168e97267",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "AttackMelee",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89645fb1-2d26-495f-ac2a-351319b40a66",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "623e7c21-040b-4b2f-932c-a52122c84776",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Computer",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Computer",
            "bindingGroup": "Computer",
            "devices": []
        }
    ]
}